<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    <TextView-->
<!--        android:id="@+id/text_hello"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Hello World!"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.216"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/text_hello"-->
<!--        app:layout_constraintVertical_bias="0.394" />-->

    <TextView
        android:id="@+id/text_title_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
    />

    <EditText
        android:id="@+id/input_amount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/text_title_convert"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:autofillHints=""
        android:inputType="numberDecimal"
    />

    <RadioGroup
        android:id="@+id/radio_group_convert_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/input_amount"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="70dp">

        <RadioButton
            android:id="@+id/radio_button_euro_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro" />

        <RadioButton
            android:id="@+id/radio_button_dollars_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollars" />

        <RadioButton
            android:id="@+id/radio_button_whatever_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whatever" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_group_convert_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toEndOf="@+id/radio_group_convert_start"
        app:layout_constraintTop_toBottomOf="@+id/input_amount"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="50dp">

        <RadioButton
            android:id="@+id/radio_button_euro_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro" />

        <RadioButton
            android:id="@+id/radio_button_dollars_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollars" />

        <RadioButton
            android:id="@+id/radio_button_whatever_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whatever" />

    </RadioGroup>

    <Button
        android:id="@+id/convert_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_convert_start"
        android:text="@string/convert_submit"
        android:layout_marginTop="10dp"
    />

    <TextView
        android:id="@+id/text_title_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="30sp"
        android:textColor="#80AA75"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/convert_submit"
    />

    <TextView
        android:id="@+id/text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#80AA75"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/text_title_result"
    />



</androidx.constraintlayout.widget.ConstraintLayout>